--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -29,6 +29,13 @@ body {
     font-weight: 100;
     font-size: 2rem;
     margin: 2%; }
+    .pro-img-con .name-con form {
+      display: flex;
+      justify-content: center; }
+      .pro-img-con .name-con form .button-class {
+        background-image: linear-gradient(0deg, #00203FFF 2%, #ADEFD1FF 74%); }
+      .pro-img-con .name-con form .friendButton {
+        background-image: linear-gradient(91deg, #ADEFD1FF 0%, #00203FFF 93%); }
 
 .total-follower-data a .follower-container {
   display: flex;
