--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -10,6 +10,7 @@ body{
     justify-content: center;
     background-color: gray;
     overflow: hidden;
+    padding: 2%;
     .edit.div{
         display: flex;
     }
@@ -31,8 +32,29 @@ body{
     .name-con{
         font-family: inherit;
         font-weight: 100;
-        font-size: 2rem;
         margin:2%;
+        span{
+            font-size: 2rem;
+        }
+        form{
+            display: flex;
+            justify-content: center;
+            button{
+                border-radius: 1rem;
+                border: 1px solid black;
+            }
+            #button-id{
+                background-image:linear-gradient(91deg, #00203FFF 0%, #ADEFD1FF 93%);
+                animation: forwards;
+                color: azure;
+                font-weight: 900;
+            }
+            .friendButton{
+                background-image:linear-gradient(91deg, #ADEFD1FF 0%, #00203FFF 93%);
+                color: azure;
+                font-weight: 900;
+            }
+        }
     }
 }
 .total-follower-data{
