--- a/public/assets/css/user_profile.css
+++ b/public/assets/css/user_profile.css
@@ -9,7 +9,8 @@ body {
   align-items: center;
   justify-content: center;
   background-color: gray;
-  overflow: hidden; }
+  overflow: hidden;
+  padding: 2%; }
   .pro-img-con .edit.div {
     display: flex; }
   .pro-img-con #edit-form {
@@ -27,8 +28,24 @@ body {
   .pro-img-con .name-con {
     font-family: inherit;
     font-weight: 100;
-    font-size: 2rem;
     margin: 2%; }
+    .pro-img-con .name-con span {
+      font-size: 2rem; }
+    .pro-img-con .name-con form {
+      display: flex;
+      justify-content: center; }
+      .pro-img-con .name-con form button {
+        border-radius: 1rem;
+        border: 1px solid black; }
+      .pro-img-con .name-con form #button-id {
+        background-image: linear-gradient(91deg, #00203FFF 0%, #ADEFD1FF 93%);
+        animation: forwards;
+        color: azure;
+        font-weight: 900; }
+      .pro-img-con .name-con form .friendButton {
+        background-image: linear-gradient(91deg, #ADEFD1FF 0%, #00203FFF 93%);
+        color: azure;
+        font-weight: 900; }
 
 .total-follower-data a .follower-container {
   display: flex;
