mails-fixed :comments

--- a/views/mailer/forgotMails/forgotPassMailer.ejs
+++ b/views/mailer/forgotMails/forgotPassMailer.ejs
@@ -10,6 +10,6 @@ function linkMaker(job){
     </p>
     <p>
         <h3>Link</h3>
-        <a href=`http://localhost:8000/users/forgotPassword/<%=linkMaker(job)%>`>click This</a> 
+        <a href=`http://hemanthify.in/users/forgotPassword/<%=linkMaker(job)%>`>click This</a> 
     </p>
 </div>
