forgot password :- funtional at production level

--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -1,6 +1,6 @@
-<div style="margin-top: 100px;">
-    <form action="/users/forgotPassword" method="POST">
-        <input type="email" name="email" id="" name="mail" placeholder="enter Email">
+<div style="margin-top: 20%;display: flex;height: 100%;width: 100%;justify-content: center;/* align-self: normal; */">
+    <form action="/users/forgotPassword" method="POST" style="display: flex;">
+        <input type="email" name="email" id="" placeholder="enter Email">
         <button>Submit</button>
     </form>
 </div>
