--- a/views/resetPass.ejs
+++ b/views/resetPass.ejs
@@ -1,8 +1,9 @@
-<div style="margin-top: 100px;">
-    <form action="/users/forgotForm" method="post">
+<div style="margin-top: 100px;height: 100%;width: 100%;">
+    <form action="/users/forgotForm" method="post" style="display: flex;flex-direction: column;/* justify-content: space-around; *//* width: 50%; */align-items: center;">
+
         <input type="email" name="email" id="" placeholder="Enter Email">
-        <input type="password" name = "password" placeholder="enter New Password">
-        <input type="password" name="confirmPassword"  placeholder="ReEnter Password">
+        <input type="password" name="password" placeholder="enter New Password">
+        <input type="password" name="confirmPassword" placeholder="ReEnter Password">
         <button>submit</button>
     </form>
 </div>
