--- a/views/resetPass.ejs
+++ b/views/resetPass.ejs
@@ -1,3 +1,9 @@
+<style>
+    input{
+        margin: 1%;
+    }
+</style>
+
 <div style="margin-top: 100px;height: 100%;width: 100%;">
     <form action="/users/forgotForm" method="post" style="display: flex;flex-direction: column;/* justify-content: space-around; *//* width: 50%; */align-items: center;">
 
