total user count added

--- a/views/users.ejs
+++ b/views/users.ejs
@@ -74,7 +74,7 @@
     </div>
     <div class="following-container" id="following-container">
         <h1>
-            All Users
+            All Users(<%=totalCount%>)
         </h1>
         <div class="overflow" id="overflow"> 
             <%for(following of all){%>
