user link on post : funtional

--- a/assets/scss/post.scss
+++ b/assets/scss/post.scss
@@ -20,6 +20,12 @@
             flex-direction: row;
             width: 100%;
             justify-content: space-between;
+            a{
+                display: flex;
+                text-decoration: none;
+                color: inherit;
+                width: 100%;
+            }
         }
         .post-user-name{
             width: 100%;
