--- a/public/assets/css/chat_box.css
+++ b/public/assets/css/chat_box.css
@@ -16,7 +16,35 @@ body {
   display: flex;
   flex-direction: column; }
   .friends-container .friend-heading {
-    font-size: 2rem; }
+    display: flex; }
+    .friends-container .friend-heading .headingClass {
+      font-size: 2rem; }
+  .friends-container #hover-area #span2 {
+    display: none;
+    font-family: 'Courier New', Courier, monospace;
+    size: 0.5rem;
+    width: 10rem;
+    /* border: 1px solid grey; */
+    box-shadow: 0px 0px 30px -4px black;
+    padding: 8px;
+    border-radius: 1rem;
+    color: var(--bgGrad1);
+    font-weight: 900;
+    position: fixed;
+    background: lavender; }
+  .friends-container #hover-area #span1 {
+    display: flex;
+    width: 1rem;
+    height: 1rem;
+    background-color: var(--bgGrad2);
+    color: var(--bgGrad1);
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--bgGrad1);
+    border-radius: 1rem;
+    padding: 8px; }
+  .friends-container #span1:hover + #span2 {
+    display: flex; }
   .friends-container #friends-div {
     flex-direction: column;
     overflow: scroll; }
