some sign-in page fixes

--- a/assets/scss/userSignIn.scss
+++ b/assets/scss/userSignIn.scss
@@ -39,13 +39,13 @@ body{
     #mail{
         align-self: flex-start;
         ::placeholder{
-            color:var(--bgGrad2);
+            color:var(--bgGrad1);
         }
         input{
             background:transparent;
             border: none;
             border-bottom: 2px solid black;
-            color:var(--bgGrad2);
+            color:var(--bgGrad1);
             width: 100%;
             font-weight: 1000;
         }
@@ -53,13 +53,13 @@ body{
     #password{
         align-self: flex-end;
         ::placeholder{
-            color:var(--bgGrad2);
+            color:var(--bgGrad1);
         }
         input{
             background:transparent;
             border: none;
             border-bottom: 2px solid black;
-            color:var(--bgGrad2);
+            color:var(--bgGrad1);
             width: 100%;
             font-weight: 1000;
         }
@@ -142,8 +142,8 @@ body{
         background-color: transparent;
         border-radius: 1rem;
         box-shadow: 4px 4px 60px 11px black;
-        width: 100%;
         height: 55%;
+        width: 100%;
         overflow: hidden;
         margin: 4px;
     }
@@ -158,5 +158,11 @@ body{
         background-image: linear-gradient(0deg, var(--bgGrad2) 36%, var(--bgGrad1) 100%);
         padding: 1%;
         min-height: fit-content;
+    }
+}
+@media screen and (max-height:625px) {
+    #userSignIn {
+        height: 75%;
+        width: 75%;
     }
 }
