--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -40,7 +40,7 @@
                         <a href="/likes/toggle/?id=<%=post._id%>&type=Post" class="toggle-like" data-likes="<%=post.likes.length%>">
                             <%=post.likes.length%>
                             <%for (data of post.likes){%>
-                                <%=data%>
+                                <%=data.user%>
                             <%}%>
                             <%if(post.likes.findIndex(like => like.user == locals.user.id)!=-1){%>
                                 <i class="fa-solid fa-heart" ></i>
