--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,6 +13,7 @@
     <script src="https://kit.fontawesome.com/0da602eef4.js" crossorigin="anonymous"></script>
     <script src="<%=assetPath('js/comments.js')%>"></script>
     <script src="<%=assetPath('js/chatEngine.js')%>"></script>
+    <script src="<%= assetPath('js/likes.js')%>"></script>
     <link rel="stylesheet" type="text/css"  href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
